--- a/ITIS-3135/index.html
+++ b/ITIS-3135/index.html
@@ -1,1 +1,10 @@
-<h1>I am Your Name and this is my ITIS3135 First Course Page</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>ITIS-3135 Course Page</title>
+</head>
+<body>
+  <h1>I am Bobby Yun and this is my ITIS3135 First Course Page</h1>
+</body>
+</html>
