--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<h1>I'm Bobby Yun and this is the root of my website</h1>
-<a href="itis3135/">Click to go to ITIS3135 Site</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Welcome</title>
+</head>
+<body>
+  <h1>Welcome to My Website</h1>
+  <a href="itis-3135/">Click here for 3135 Course Page</a>
+</body>
+</html>
