--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ITIS-3135 Course Page</title>
+  <title>ITIS3135 Course Page</title>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>I am Bobby Yun and this is my ITIS-3135 First Course Page</h1>
+  <h1>I am Bobby Yun and this is my ITIS3135 First Course Page</h1>
 </body>
 </html>
