--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -2,10 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ITIS3135 Course Page</title>
+  <title>Bobby Yun’s Ballsy Yeti ITIS3135 Introduction</title>
+  <link rel="stylesheet" href="styles/default.css">
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>I am Bobby Yun and this is my ITIS3135 First Course Page</h1>
+
+  <header>
+    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="./">Home</a></li>
+      <li><a href="introduction.html">Introduction</a></li>
+      <li><a href="contract.html">Contract</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <h2>Welcome to My ITIS3135 Course Site</h2>
+    <p>Here you'll find my projects, assignments, and course work!</p>
+  </main>
+
+  <footer>
+    <ul>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web Home</a></li>
+      <li><a href="https://github.com/hungry-bobby/">GitHub Repo</a></li>
+      <li><a href="https://hungry-bobby.github.io/itis3135/">GitHub Pages for this Course</a></li>
+      <li><a href="https://www.freecodecamp.org/BobbyYun">freeCodeCamp Profile</a></li>
+      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn Profile</a></li>
+    </ul>
+    <p>Designed by Yun Designs &copy; 2025</p>
+  </footer>
+
 </body>
 </html>
