--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -33,7 +33,7 @@
       <li><a href="https://www.freecodecamp.org/BobbyYun">freeCodeCamp Profile</a></li>
       <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn Profile</a></li>
     </ul>
-    <p>Designed by Yun Designs &copy; 2025</p>
+    <p>Designed by Bobby Yun &copy; 2025</p>
   </footer>
 
 </body>
