--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -28,8 +28,8 @@
   <footer>
     <ul>
       <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web Home</a></li>
-      <li><a href="https://github.com/hungry-bobby/">GitHub Repo</a></li>
-      <li><a href="https://hungry-bobby.github.io/itis3135/">GitHub Pages for this Course</a></li>
+      <li><a href="https://github.com/hungry-bobby">GitHub Repo</a></li>
+      <li><a href="https://github.com/hungry-bobby/cyun2.github.io">GitHub Pages for this Course</a></li>
       <li><a href="https://www.freecodecamp.org/BobbyYun">freeCodeCamp Profile</a></li>
       <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn Profile</a></li>
     </ul>
