--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -22,18 +22,18 @@
 
   <main>
     <h2>Welcome to My ITIS3135 Course Site</h2>
-    <p>Here you'll find my projects, assignments, and course work!</p>
+    <p>This site will host my web development projects, assignments, and resources for the Spring 2025 semester!</p>
   </main>
 
   <footer>
     <ul>
       <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web Home</a></li>
-      <li><a href="https://github.com/hungry-bobby">GitHub Repo</a></li>
-      <li><a href="https://github.com/hungry-bobby/cyun2.github.io">GitHub Pages for this Course</a></li>
-      <li><a href="https://www.freecodecamp.org/BobbyYun">freeCodeCamp Profile</a></li>
-      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn Profile</a></li>
+      <li><a href="https://github.com/hungry-bobby/">GitHub Repo</a></li>
+      <li><a href="https://hungry-bobby.github.io/itis3135/">GitHub Pages for this Course</a></li>
+      <li><a href="https://www.freecodecamp.org/">FreeCodeCamp Profile</a></li>
+      <li><a href="https://www.linkedin.com/">LinkedIn Profile</a></li>
     </ul>
-    <p>Designed by Bobby Yun &copy; 2025</p>
+    <p>Designed by Yun Designs &copy; 2025</p>
   </footer>
 
 </body>
