--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -23,6 +23,9 @@
   <main>
     <h2>Introduction</h2>
 
+    <img src="images/pfp.jpg" alt="almost got disowned over a fake tattoo lol" width="300">
+
+
     <p><strong>Personal Background:</strong> I live in Matthews, NC. I was originally a business major, but decided to change my major after I discovered my interest in computers over quarantine.</p>
 
     <p><strong>Professional Background:</strong> I am an IT intern (remote) for a small pet store in Minnesota, and before that I worked at a sushi restaurant.</p>
@@ -69,6 +72,6 @@
     </ul>
     <p>Designed by Bobby Yun &copy; 2025</p>
   </footer>
-  
+
 </body>
 </html>
