--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -25,7 +25,6 @@
 
     <img src="images/pfp.jpg" alt="almost got disowned over a fake tattoo lol" width="300">
 
-
     <p><strong>Personal Background:</strong> I live in Matthews, NC. I was originally a business major, but decided to change my major after I discovered my interest in computers over quarantine.</p>
 
     <p><strong>Professional Background:</strong> I am an IT intern (remote) for a small pet store in Minnesota, and before that I worked at a sushi restaurant.</p>
@@ -34,27 +33,25 @@
 
     <p><strong>Background in this Subject:</strong> Most of my computer science knowledge came from the CCI program here at UNCC, which sparked my interest in coding projects outside of school.</p>
 
-    <p><strong>Primary Computer Platform:</strong> I built my own PC:
-      <ul>
-        <li><strong>CPU:</strong> AMD Ryzen 7 9700X 8-Core</li>
-        <li><strong>GPU:</strong> RX 7900 XT</li>
-        <li><strong>Monitor 1:</strong> Sceptre Curved 24.5 inch 240hz</li>
-        <li><strong>Monitor 2 & 3:</strong> Acer 21.5 inch 75hz</li>
-        <li><strong>Keyboard:</strong> Redragon K550</li>
-        <li><strong>Mouse:</strong> Pwnage Ultra Custom Wireless Symm 2 & Logitech G Superlight & glorious model O</li>
-        <li><strong>Mousepad:</strong> HyperX mousepad 2XL</li>
-      </ul>
-    </p>
+    <p><strong>Primary Computer Platform:</strong> I built my own PC:</p>
+    <ul>
+      <li><strong>CPU:</strong> AMD Ryzen 7 9700X 8-Core</li>
+      <li><strong>GPU:</strong> RX 7900 XT</li>
+      <li><strong>Monitor 1:</strong> Sceptre Curved 24.5 inch 240hz</li>
+      <li><strong>Monitor 2 & 3:</strong> Acer 21.5 inch 75hz</li>
+      <li><strong>Keyboard:</strong> Redragon K550</li>
+      <li><strong>Mouse:</strong> Pwnage Ultra Custom Wireless Symm 2 & Logitech G Superlight & glorious model O</li>
+      <li><strong>Mousepad:</strong> HyperX mousepad 2XL</li>
+    </ul>
 
-    <p><strong>Courses I'm Taking & Why:</strong>
-      <ul>
-        <li>ITIS 3135 - had this professor previously and enjoyed the course</li>
-        <li>ITSC 3135 - required</li>
-        <li>ITSC 3310 - required</li>
-        <li>ITCS 3160 - required</li>
-        <li>ITCS 4180 - I wanted to learn to make mobile applications</li>
-      </ul>
-    </p>
+    <p><strong>Courses I'm Taking & Why:</strong></p>
+    <ul>
+      <li>ITIS 3135 - had this professor previously and enjoyed the course</li>
+      <li>ITSC 3135 - required</li>
+      <li>ITSC 3310 - required</li>
+      <li>ITCS 3160 - required</li>
+      <li>ITCS 4180 - I wanted to learn to make mobile applications</li>
+    </ul>
 
     <p><strong>Things to Remember Me By:</strong> I shaved my head so imagine my image but bald!</p>
 
