--- a/index.html
+++ b/index.html
@@ -2,10 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome</title>
+  <title>Bobby Yun – Home</title>
+  <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
+  <style>
+    body {
+      background-color: #00FFFF;
+      color: #333;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    header, main, footer {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 10px 0;
+    }
+
+    nav ul li {
+      display: inline-block;
+      margin: 0 10px;
+    }
+
+    nav a, footer a {
+      text-decoration: none;
+      color: #006699;
+    }
+
+    footer ul {
+      list-style: none;
+      padding: 0;
+      margin: 10px 0;
+    }
+
+    footer ul li {
+      display: inline-block;
+      margin: 0 10px;
+    }
+
+    footer p {
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to My Website</h1>
-  <a href="itis3135/">Click here for 3135 Course Page</a>
+
+  <header>
+    <h1>Bobby Yun</h1>
+    <p>Welcome to my personal homepage</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="itis3135/">ITIS3135</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <h2>About This Page</h2>
+    <p>This is my homepage for UNC Charlotte and GitHub Pages. It serves as a central hub to all my course work and projects.</p>
+  </main>
+
+  <footer>
+    <ul>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
+      <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
+    </ul>
+    <p>
+      <a href="https://validator.w3.org/">HTML Validation</a> |
+      <a href="https://jigsaw.w3.org/css-validator/">CSS Validation</a>
+    </p>
+    <p>Designed by Yun Designs &copy; 2025</p>
+  </footer>
+
 </body>
 </html>
