--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
       <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
     </ul>
     <p>
-      <a href="https://validator.w3.org/">HTML Validation</a> |
-      <a href="https://jigsaw.w3.org/css-validator/">CSS Validation</a>
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
     </p>
     <p>Designed by Yun Designs &copy; 2025</p>
   </footer>
