--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -14,7 +14,7 @@
 
   <nav>
     <ul>
-      <li><a href="./">Home</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
       <li><a href="introduction.html">Introduction</a></li>
       <li><a href="contract.html">Contract</a></li>
     </ul>
