--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bobby Yun’s Ballsy Yeti ITIS3135 Introduction</title>
+  <title>Bobby Yun’s Ballsy Yeti, ITIS-3135 Introduction</title>
   <link rel="stylesheet" href="styles/default.css">
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
