--- a/ITIS-3135/index.html
+++ b/ITIS-3135/index.html
@@ -33,7 +33,7 @@
       <li><a href="https://www.freecodecamp.org/">FreeCodeCamp Profile</a></li>
       <li><a href="https://www.linkedin.com/">LinkedIn Profile</a></li>
     </ul>
-    <p>Designed by Yun Designs &copy; 2025</p>
+    <p>Designed by BobbyBuiltIt.co &copy; 2025</p>
   </footer>
 
 </body>
