--- a/ballsyyeti/about.html
+++ b/ballsyyeti/about.html
@@ -46,7 +46,7 @@
 
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
   </nav>
