--- a/ITIS-3135/introduction.html
+++ b/ITIS-3135/introduction.html
@@ -17,7 +17,7 @@
       <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
       <li><a href="introduction.html">Introduction</a></li>
       <li><a href="contract.html">Contract</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti">Whimsical Company</a></li>
     </ul>
   </nav>
 
