--- a/ITIS-3135/introduction.html
+++ b/ITIS-3135/introduction.html
@@ -17,7 +17,7 @@
       <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
       <li><a href="introduction.html">Introduction</a></li>
       <li><a href="contract.html">Contract</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/index.html">Whimsical Company</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
     </ul>
   </nav>
 
@@ -57,7 +57,6 @@
     <p><strong>Things to Remember Me By:</strong> I shaved my head so imagine my image but bald!</p>
 
     <p><strong>I'd also like to Share:</strong> At this very moment (1/21/25 3:17 AM), I would really like a coffee.</p>
-
   </main>
 
   <footer>
@@ -68,7 +67,7 @@
       <li><a href="https://www.freecodecamp.org/BobbyYun">freeCodeCamp Profile</a></li>
       <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn Profile</a></li>
     </ul>
-    <p>Designed by BobbyBuiltIt.co &copy; 2025</p>
+    <p>Designed by <a href="bobbybuiltit.co/">BobbyBuiltIt.co</a> &copy; 2025</p>
   </footer>
 
 </body>
