--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
       <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
     </p>
-    <p>Designed by Yun Designs &copy; 2025</p>
+    <p>Designed by <a href="placeholder/">BobbyBuiltIt.co</a> &copy; 2025</p>
   </footer>
 
 </body>
