--- a/ITIS-3135/introduction.html
+++ b/ITIS-3135/introduction.html
@@ -26,7 +26,7 @@
 
     <img src="images/pfp.jpg" alt="almost got disowned over a fake tattoo lol" width="300">
 
-    <p><strong>Personal Backgroundsss:</strong> I live in Matthews, NC. I was originally a business major, but decided to change my major after I discovered my interest in computers over quarantine.</p>
+    <p><strong>Personal Background:</strong> I live in Matthews, NC. I was originally a business major, but decided to change my major after I discovered my interest in computers over quarantine.</p>
 
     <p><strong>Professional Background:</strong> I am an IT intern (remote) for a small pet store in Minnesota, and before that I worked at a sushi restaurant.</p>
 
