--- a/ballsyyeti/index.html
+++ b/ballsyyeti/index.html
@@ -47,6 +47,9 @@
   <nav>
     <ul>
       <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
+      <li><a href="introduction.html">Introduction</a></li>
+      <li><a href="contract.html">Contract</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
   </nav>
