--- a/bobbybuiltit.co/index.html
+++ b/bobbybuiltit.co/index.html
@@ -109,13 +109,13 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 BobbyBuiltIt.co</p>
+    <p>&copy; 2025 <a href="bobbybuiltit.co/">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
     <p>
-        <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
-        <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
     </p>
   </footer>
-
+  
 </body>
 </html>
