--- a/ballsyyeti/about.html
+++ b/ballsyyeti/about.html
@@ -62,11 +62,12 @@
       <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
     </ul>
+    <p>&copy; 2025 <a href="bobbybuiltit.co/">BobbyBuiltIt.co</a></p>
+    <p><em>“Built By Bobby.”</em></p>
     <p>
       <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
       <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
     </p>
-    <p>Designed by BobbyBuiltIt.co &copy; 2025</p>
   </footer>
 
 </body>
