--- a/bobbybuiltit.co/index.html
+++ b/bobbybuiltit.co/index.html
@@ -81,7 +81,7 @@
 <body>
 
   <header>
-    <img src="images/BobbyBuiltIt.co logo.png" alt="BobbyBuiltIt.co logo">
+    <img src="images/logo.png" alt="BobbyBuiltIt.co logo">
     <h1>BobbyBuiltIt.co</h1>
     <p><q>“Built By Bobby.”</q></p>
   </header>
