--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -28,14 +28,16 @@
 
   <footer>
     <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web Home</a></li>
-      <li><a href="https://github.com/hungry-bobby">GitHub Repo</a></li>
-      <li><a href="https://github.com/hungry-bobby/cyun2.github.io">GitHub Pages for this Course</a></li>
-      <li><a href="https://www.freecodecamp.org/BobbyYun">freeCodeCamp Profile</a></li>
-      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn Profile</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
+      <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
     </ul>
-    <p>Designed by BobbyBuiltIt.co &copy; 2025</p>
+    <p>&copy; 2025 <a href="bobbybuiltit.co/">BobbyBuiltIt.co</a></p>
+    <p><em>“Built By Bobby.”</em></p>
+    <p>
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
+    </p>
   </footer>
-
 </body>
 </html>
