--- a/bobbybuiltit.co/index.html
+++ b/bobbybuiltit.co/index.html
@@ -5,6 +5,10 @@
   <title>BobbyBuiltIt.co - Design Firm</title>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       background-color: #f4f0ec;
       color: #2c2c2c;
@@ -53,6 +57,7 @@
       text-align: left;
       display: inline-block;
       margin-top: 20px;
+      padding-left: 20px;
     }
 
     .contact-block {
@@ -76,12 +81,16 @@
       color: #a05a2c;
       text-decoration: none;
     }
+
+    a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="images/logo.png" alt="BobbyBuiltIt.co logo">
+    <img src="images/logo.png" alt="BobbyBuiltIt logo showing a cartoon builder yeti">
     <h1>BobbyBuiltIt.co</h1>
     <p><q>“Built By Bobby.”</q></p>
   </header>
@@ -94,10 +103,10 @@
 
     <ul class="custom-list">
       <li>Clean and Responsive Websites</li>
-      <li>Custom Slidware</li>
-      <li>Custom Moiblie Applications</li>
-      <li>Custom Discord Bot</li>
-      <li>Technical blogs and project showcases</li>
+      <li>Custom Slideware</li>
+      <li>Custom Mobile Applications</li>
+      <li>Custom Discord Bots</li>
+      <li>Technical Blogs and Project Showcases</li>
     </ul>
 
     <div class="contact-block">
@@ -109,13 +118,8 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 <a href="bobbybuiltit.co/">BobbyBuiltIt.co</a></p>
+    <p>&copy; 2025 <a href="https://bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
     <p>
-      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
-      <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
-    </p>
-  </footer>
-  
-</body>
-</html>
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/" target="_blank" rel="noopener noreferrer">Responsive Web Design Certification</a> |
+      <a href="https://www.freecodecamp.org/certification/BobbyYun
