--- a/bobbybuiltit.co/index.html
+++ b/bobbybuiltit.co/index.html
@@ -5,10 +5,6 @@
   <title>BobbyBuiltIt.co - Design Firm</title>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
     body {
       background-color: #f4f0ec;
       color: #2c2c2c;
@@ -90,10 +86,17 @@
 <body>
 
   <header>
-    <img src="images/logo.png" alt="BobbyBuiltIt logo showing a cartoon builder yeti">
+    <img src="images/logo.png" alt="BobbyBuiltIt logo showing a cartoon builder yeti" width="80" height="80">
     <h1>BobbyBuiltIt.co</h1>
     <p><q>“Built By Bobby.”</q></p>
   </header>
+
+  <nav>
+    <ul>
+      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
 
   <main>
     <h2>What BobbyBuiltIt.co Does</h2>
@@ -106,7 +109,7 @@
       <li>Custom Slideware</li>
       <li>Custom Mobile Applications</li>
       <li>Custom Discord Bots</li>
-      <li>Technical Blogs and Project Showcases</li>
+      <li>Technical blogs and project showcases</li>
     </ul>
 
     <div class="contact-block">
@@ -121,5 +124,14 @@
     <p>&copy; 2025 <a href="https://bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
     <p>
-      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/" target="_blank" rel="noopener noreferrer">Responsive Web Design Certification</a> |
-      <a href="https://www.freecodecamp.org/certification/BobbyYun
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/" target="_blank" rel="noopener noreferrer">
+        Responsive Web Design Certification
+      </a> |
+      <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/" target="_blank" rel="noopener noreferrer">
+        JADS Certification
+      </a>
+    </p>
+  </footer>
+
+</body>
+</html>
