--- a/stuff/index.htm
+++ b/stuff/index.htm
@@ -43,7 +43,7 @@
 <body>
   <h2>This is the caption of the image</h2>
 
-  <img src="badimage.jpg" class="absolute-image" width="400" height="100" alt="This is a bad image with bad ratio">
+  <img src="image/img.jpeg" class="absolute-image" width="400" height="100" alt="This is a bad image with bad ratio">
 
   <p class="ugly-text">Welcome to the worst page you've ever seen :)</p>
 
