--- a/stuff/index.htm
+++ b/stuff/index.htm
@@ -41,9 +41,9 @@
 </head>
 
 <body>
-  <h2>This is the caption of the image</h2>
+  <h2>iMagE of a clOWn</h2>
 
-  <img src="image/img.jpeg" class="absolute-image" width="400" height="100" alt="This is a bad image with bad ratio">
+  <img src="image/img.jpeg" class="absolute-image" width="400" height="100" alt="iMagE of a clOWn">
 
   <p class="ugly-text">Welcome to the worst page you've ever seen :)</p>
 
