--- a/stuff/index.htm
+++ b/stuff/index.htm
@@ -42,6 +42,12 @@
 
 <body>
   <h2>iMagE of a clOWn</h2>
+  <h2>iMagE of a clOWn</h2>
+  <h2>iMagE of a clOWn</h2>
+  <h2>iMagE of a clOWn</h2>
+  <h2>iMagE of a clOWn</h2>
+  <h2>iMagE of a clOWn</h2>
+  
 
   <img src="image/img.jpeg" class="absolute-image" width="400" height="100" alt="iMagE of a clOWn">
 
