--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -18,7 +18,7 @@
       <li><a href="introduction.html">Introduction</a></li>
       <li><a href="contract.html">Contract</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/">CRAPPY Website</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
     </ul>
   </nav>
   
