--- a/bobbybuiltit.co/index.html
+++ b/bobbybuiltit.co/index.html
@@ -121,7 +121,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 <a href="https://bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
+    <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
     <p>
       <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/" target="_blank" rel="noopener noreferrer">
