--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -19,6 +19,7 @@
       <li><a href="contract.html">Contract</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/website_evaluations.html">Website Evaluation</a></li>
     </ul>
   </nav>
   
