--- a/itis3135/introduction.html
+++ b/itis3135/introduction.html
@@ -4,24 +4,12 @@
   <meta charset="UTF-8">
   <title>Bobby Yun’s Ballsy Yeti, ITIS-3135 Introduction</title>
   <link rel="stylesheet" href="styles/default.css">
+  <script src="scripts/HTMLInclude.js" defer></script>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <header>  
-    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
-  </header>
-
-  <nav>
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
-      <li><a href="introduction.html">Introduction</a></li>
-      <li><a href="contract.html">Contract</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/website_evaluations.html">Website Evaluation</a></li>
-    </ul>
-  </nav>
+  <div data-include="components/header.html"></div>
 
   <main>
     <h2>Introduction</h2>
@@ -61,19 +49,7 @@
     <p><strong>I'd also like to Share:</strong> At this very moment (1/21/25 3:17 AM), I would really like a coffee.</p>
   </main>
 
-  <footer>
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
-      <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
-    </ul>
-    <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
-    <p><em>“Built By Bobby.”</em></p>
-    <p>
-      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
-      <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
-    </p>
-  </footer>
+  <div data-include="components/footer.html"></div>
 
 </body>
 </html>
