--- a/itis3135/contract.html
+++ b/itis3135/contract.html
@@ -4,42 +4,19 @@
   <meta charset="UTF-8">
   <title>Course Contract - Bobby Yun</title>
   <link rel="stylesheet" href="styles/default.css">
+  <script src="scripts/HTMLInclude.js" defer></script>
   <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <header>
-    <h1>Bobby Yun’s Ballsy Yeti ITIS3135</h1>
-  </header>
+  <div data-include="components/header.html"></div>
 
-  <nav>
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">Home</a></li>
-      <li><a href="introduction.html">Introduction</a></li>
-      <li><a href="contract.html">Contract</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
-      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/website_evaluations.html">Website Evaluation</a></li>
-    </ul>
-  </nav>
-  
   <main>
     <h2>Course Contract</h2>
     <p><em>I, Bobby Yun, agree to abide by the terms of the course contract in my SPRING 2025, ITIS-3135, Web App Design and Development class with my instructor, Professor D.I. von Briesen. I understand that all work that I do on publicly available online tools will be available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private. I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences. I also understand that given the structure and content of this class it’s possible to find many examples online or even view my classmates’ code directly. I swear that I will only use these resources to learn, and will not cut and paste code except where I have properly given credit (i.e., external libraries) and never from my classmates. Signed: Bobby Yun, 02/03/2025.</em></p>
   </main>
 
-  <footer>
-    <ul>
-      <li><a href="https://webpages.charlotte.edu/cyun2/">CLT Web</a></li>
-      <li><a href="https://github.com/hungry-bobby">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/bobby-yun/">LinkedIn</a></li>
-    </ul>
-    <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
-    <p><em>“Built By Bobby.”</em></p>
-    <p>
-      <a href="https://www.freecodecamp.org/certification/BobbyYun/responsive-web-design/">Responsive Web Design Certification</a> |
-      <a href="https://www.freecodecamp.org/certification/BobbyYun/javascript-algorithms-and-data-structures-v8/">JADS Certification</a>
-    </p>
-  </footer>
+  <div data-include="components/footer.html"></div>
+
 </body>
 </html>
