--- a/itis3135/comonents/footer.html
+++ b/itis3135/comonents/footer.html
@@ -7,8 +7,8 @@
     <p>&copy; 2025 <a href="https://webpages.charlotte.edu/cyun2/bobbybuiltit.co/" target="_blank" rel="noopener noreferrer">BobbyBuiltIt.co</a></p>
     <p><em>“Built By Bobby.”</em></p>
     <p>
-      <a href="#" id="validation_link_html">HTML Validation</a> |
-      <a href="#" id="validation_link_css">CSS Validation</a>
+      <a id="validation_link_html">HTML Validation</a> |
+      <a id="validation_link_css">CSS Validation</a>
     </p>
   </footer>
   
