--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -11,6 +11,8 @@
 <div data-include="components/header.html"></div>
 
 <main>
+  <p><em>Disclaimer: The names used in this assignment are fictional and based on characters from the video game <strong>Valorant</strong>. This is for educational purposes only.</em></p>
+
   <h2>HTML Tables Assignment</h2>
 
   <h3>My Tabular Data</h3>
@@ -26,28 +28,30 @@
   </ol>
 
   <h3>Employee Data in Simple Table</h3>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Years of Service</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>Jett</td><td>jett@valorant.com</td><td>3</td></tr>
-      <tr><td>Phoenix</td><td>phoenix@valorant.com</td><td>5</td></tr>
-      <tr><td>Sage</td><td>sage@valorant.com</td><td>8</td></tr>
-      <tr><td>Omen</td><td>omen@valorant.com</td><td>6</td></tr>
-      <tr><td>Brimstone</td><td>brimstone@valorant.com</td><td>10</td></tr>
-      <tr><td>Killjoy</td><td>killjoy@valorant.com</td><td>4</td></tr>
-      <tr><td>Raze</td><td>raze@valorant.com</td><td>2</td></tr>
-      <tr><td>Viper</td><td>viper@valorant.com</td><td>7</td></tr>
-    </tbody>
-  </table>
+  <div style="display: flex; justify-content: center;">
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Years of Service</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr><td>Jett</td><td>jett@valorant.com</td><td>3</td></tr>
+        <tr><td>Phoenix</td><td>phoenix@valorant.com</td><td>5</td></tr>
+        <tr><td>Sage</td><td>sage@valorant.com</td><td>8</td></tr>
+        <tr><td>Omen</td><td>omen@valorant.com</td><td>6</td></tr>
+        <tr><td>Brimstone</td><td>brimstone@valorant.com</td><td>10</td></tr>
+        <tr><td>Killjoy</td><td>killjoy@valorant.com</td><td>4</td></tr>
+        <tr><td>Raze</td><td>raze@valorant.com</td><td>2</td></tr>
+        <tr><td>Viper</td><td>viper@valorant.com</td><td>7</td></tr>
+      </tbody>
+    </table>
+  </div>
 
   <h3>Employee Data in Complex Table</h3>
-  <figure>
+  <figure style="display: flex; justify-content: center; flex-direction: column; align-items: center;">
     <figcaption>Employee Information</figcaption>
     <table border="1">
       <thead>
