--- a/itis3135/tables.html
+++ b/itis3135/tables.html
@@ -16,16 +16,19 @@
   <h2>HTML Tables Assignment</h2>
 
   <h3>My Tabular Data</h3>
-  <ol>
-    <li>Jett - jett@valorant.com - 3</li>
-    <li>Phoenix - phoenix@valorant.com - 5</li>
-    <li>Sage - sage@valorant.com - 8</li>
-    <li>Omen - omen@valorant.com - 6</li>
-    <li>Brimstone - brimstone@valorant.com - 10</li>
-    <li>Killjoy - killjoy@valorant.com - 4</li>
-    <li>Raze - raze@valorant.com - 2</li>
-    <li>Viper - viper@valorant.com - 7</li>
-  </ol>
+  <div style="display: flex; justify-content: center;">
+    <ol style="text-align: left;">
+      <li>Jett - jett@valorant.com - 3</li>
+      <li>Phoenix - phoenix@valorant.com - 5</li>
+      <li>Sage - sage@valorant.com - 8</li>
+      <li>Omen - omen@valorant.com - 6</li>
+      <li>Brimstone - brimstone@valorant.com - 10</li>
+      <li>Killjoy - killjoy@valorant.com - 4</li>
+      <li>Raze - raze@valorant.com - 2</li>
+      <li>Viper - viper@valorant.com - 7</li>
+    </ol>
+  </div>
+  
 
   <h3>Employee Data in Simple Table</h3>
   <div style="display: flex; justify-content: center;">
