--- a/itis3135/comonents/header.html
+++ b/itis3135/comonents/header.html
@@ -10,6 +10,7 @@
       <li><a href="https://webpages.charlotte.edu/cyun2/ballsyyeti/">Whimsical Company</a></li>
       <li><a href="https://webpages.charlotte.edu/cyun2/stuff/free%5EVBucks%5EHere.htm">CRAPPY Website</a></li>
       <li><a href="website_evaluations.html">Website Evaluation</a></li>
+      <li><a href="https://webpages.charlotte.edu/cyun2/itis3135/tables.html">HTML Tables</a></li>
     </ul>
   </nav>
   
